created table view controller for books category

--- a/SmartShopper/Base.lproj/Main.storyboard
+++ b/SmartShopper/Base.lproj/Main.storyboard
@@ -344,6 +344,13 @@
                                     <segue destination="QFQ-o5-cx2" kind="show" id="r5F-6l-AKM"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bmm-K8-KUH">
+                                <rect key="frame" x="219" y="402" width="116" height="72"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <segue destination="6AI-Ml-X38" kind="show" id="OJr-vd-NfJ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="fDH-E9-9OV"/>
@@ -439,6 +446,54 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6ph-5l-nms" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3031" y="1429"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="D78-qv-nYg">
+            <objects>
+                <tableViewController id="6AI-Ml-X38" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="x0a-az-tgj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="mzg-Kc-RTJ">
+                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mzg-Kc-RTJ" id="JDp-as-SeP">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="HKU-Dh-LLa" kind="show" id="xHQ-mY-SeR"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="6AI-Ml-X38" id="asd-qc-Hef"/>
+                            <outlet property="delegate" destination="6AI-Ml-X38" id="pk7-eO-pW4"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="t5e-t9-Bu3"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4DY-uq-kGF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4135" y="1812"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="1qG-le-PJq">
+            <objects>
+                <viewController id="HKU-Dh-LLa" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gEc-hv-heb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="A5P-gH-ybX"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="gjH-Tw-BRj"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OCT-8V-54m" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5042" y="1812"/>
         </scene>
         <!--Footwear Table View Controller-->
         <scene sceneID="qp5-MK-S8n">
